chore: operator roles sanitizing (#1814)
* chore: che-operator roles sanitizing

Signed-off-by: Anatolii Bazko <abazko@redhat.com>

--- a/bundle/next/eclipse-che/manifests/che-operator.clusterserviceversion.yaml
+++ b/bundle/next/eclipse-che/manifests/che-operator.clusterserviceversion.yaml
@@ -92,7 +92,7 @@ metadata:
     operators.operatorframework.io/project_layout: go.kubebuilder.io/v3
     repository: https://github.com/eclipse-che/che-operator
     support: Eclipse Foundation
-  name: eclipse-che.v7.82.0-842.next
+  name: eclipse-che.v7.83.0-858.next
   namespace: placeholder
 spec:
   apiservicedefinitions: {}
@@ -499,11 +499,17 @@ spec:
       clusterPermissions:
         - rules:
             - apiGroups:
-                - ""
+                - batch
               resources:
-                - nodes
+                - jobs
               verbs:
+                - create
+                - delete
                 - get
+                - update
+                - patch
+                - watch
+                - list
             - apiGroups:
                 - oauth.openshift.io
               resources:
@@ -511,37 +517,11 @@ spec:
               verbs:
                 - create
                 - delete
-                - deletecollection
                 - get
-                - list
-                - patch
                 - update
-                - watch
-            - apiGroups:
-                - config.openshift.io
-              resources:
-                - oauths
-              verbs:
-                - get
-                - list
-                - watch
                 - patch
-            - apiGroups:
-                - config.openshift.io
-              resources:
-                - infrastructures
-                - proxies
-              verbs:
-                - get
-                - list
                 - watch
-            - apiGroups:
-                - user.openshift.io
-              resources:
-                - users
-              verbs:
                 - list
-                - delete
             - apiGroups:
                 - user.openshift.io
               resources:
@@ -549,55 +529,49 @@ spec:
               verbs:
                 - get
             - apiGroups:
-                - user.openshift.io
-              resources:
-                - identities
-              verbs:
-                - delete
-            - apiGroups:
                 - console.openshift.io
               resources:
                 - consolelinks
               verbs:
-                - get
-                - list
                 - create
+                - delete
+                - get
                 - update
                 - patch
-                - delete
+                - watch
+                - list
             - apiGroups:
                 - rbac.authorization.k8s.io
               resources:
-                - clusterrolebindings
-                - clusterroles
                 - roles
                 - rolebindings
+                - clusterroles
+                - clusterrolebindings
               verbs:
-                - list
                 - create
-                - watch
-                - update
+                - delete
                 - get
+                - update
+                - patch
+                - watch
+                - list
+            - apiGroups:
+                - authorization.openshift.io
+              resources:
+                - rolebindings
+              verbs:
+                - get
+                - create
+                - update
                 - delete
             - apiGroups:
                 - authorization.openshift.io
               resources:
                 - roles
-                - rolebindings
               verbs:
                 - get
                 - create
                 - update
-                - delete
-            - apiGroups:
-                - org.eclipse.che
-              resources:
-                - checlusters
-                - checlusters/status
-                - checlusters/finalizers
-                - checlusters/status
-              verbs:
-                - '*'
             - apiGroups:
                 - project.openshift.io
               resources:
@@ -626,63 +600,38 @@ spec:
                 - update
                 - watch
             - apiGroups:
-                - ""
-              resources:
-                - pods/exec
-              verbs:
-                - create
-                - get
-            - apiGroups:
                 - apps
               resources:
-                - secrets
+                - replicasets
               verbs:
-                - list
-            - apiGroups:
-                - ""
-              resources:
-                - secrets
-              verbs:
-                - list
                 - get
-                - create
-                - update
+                - list
                 - patch
                 - delete
             - apiGroups:
-                - ""
-              resources:
-                - persistentvolumeclaims
-              verbs:
-                - create
-                - get
-                - list
-                - watch
-                - delete
-            - apiGroups:
-                - ""
-              resources:
-                - pods
-              verbs:
-                - get
-                - list
-                - create
-                - watch
-                - delete
-            - apiGroups:
                 - apps
-                - extensions
               resources:
                 - deployments
-                - replicasets
               verbs:
-                - '*'
+                - list
+                - create
+                - watch
+                - update
+                - get
+                - patch
+                - delete
             - apiGroups:
                 - route.openshift.io
               resources:
                 - routes
               verbs:
-                - '*'
+                - create
+                - delete
+                - get
+                - update
+                - patch
+                - watch
+                - list
             - apiGroups:
                 - route.openshift.io
               resources:
@@ -697,48 +646,17 @@ spec:
                 - list
                 - watch
             - apiGroups:
-                - apps
-              resources:
-                - replicasets
-              verbs:
-                - list
-                - get
-                - patch
-                - delete
-            - apiGroups:
-                - extensions
-              resources:
-                - ingresses
-              verbs:
-                - '*'
-            - apiGroups:
                 - networking.k8s.io
               resources:
                 - ingresses
               verbs:
-                - '*'
-            - apiGroups:
-                - apiextensions.k8s.io
-              resources:
-                - customresourcedefinitions
-              verbs:
-                - get
                 - create
+                - delete
+                - get
                 - update
-            - apiGroups:
-                - operators.coreos.com
-              resources:
-                - subscriptions
-              verbs:
-                - get
-            - apiGroups:
-                - operators.coreos.com
-              resources:
-                - clusterserviceversions
-              verbs:
-                - list
-                - get
+                - patch
                 - watch
+                - list
             - apiGroups:
                 - metrics.k8s.io
               resources:
@@ -749,16 +667,6 @@ spec:
                 - list
                 - watch
             - apiGroups:
-                - cert-manager.io
-              resources:
-                - issuers
-                - certificates
-              verbs:
-                - create
-                - get
-                - list
-                - update
-            - apiGroups:
                 - ""
               resources:
                 - configmaps
@@ -768,33 +676,27 @@ spec:
                 - serviceaccounts
                 - services
               verbs:
-                - '*'
-            - apiGroups:
-                - apps
-              resourceNames:
-                - che-operator
-              resources:
-                - deployments/finalizers
-              verbs:
+                - create
+                - delete
+                - get
                 - update
+                - patch
+                - watch
+                - list
             - apiGroups:
-                - batch
+                - org.eclipse.che
               resources:
-                - jobs
+                - checlusters
+                - checlusters/status
+                - checlusters/finalizers
               verbs:
                 - create
                 - delete
                 - get
                 - update
+                - patch
                 - watch
                 - list
-            - apiGroups:
-                - monitoring.coreos.com
-              resources:
-                - servicemonitors
-              verbs:
-                - create
-                - get
             - nonResourceURLs:
                 - /metrics
               verbs:
@@ -804,13 +706,25 @@ spec:
               resources:
                 - kubernetesimagepullers
               verbs:
-                - '*'
+                - create
+                - delete
+                - get
+                - update
+                - list
             - apiGroups:
                 - config.openshift.io
               resourceNames:
                 - cluster
               resources:
                 - consoles
+              verbs:
+                - get
+            - apiGroups:
+                - config.openshift.io
+              resourceNames:
+                - cluster
+              resources:
+                - proxies
               verbs:
                 - get
             - apiGroups:
@@ -830,31 +744,38 @@ spec:
                 - list
                 - create
             - apiGroups:
+                - ""
+              resources:
+                - pods/exec
+              verbs:
+                - create
+                - get
+            - apiGroups:
                 - workspace.devfile.io
               resources:
                 - devworkspaces
                 - devworkspacetemplates
               verbs:
-                - get
-                - list
-                - watch
                 - create
                 - delete
-                - patch
+                - get
                 - update
+                - patch
+                - watch
+                - list
             - apiGroups:
                 - controller.devfile.io
               resources:
                 - devworkspaceroutings
                 - devworkspaceoperatorconfigs
               verbs:
-                - get
-                - list
-                - watch
                 - create
                 - delete
-                - patch
+                - get
                 - update
+                - patch
+                - watch
+                - list
             - apiGroups:
                 - controller.devfile.io
               resources:
@@ -897,6 +818,13 @@ spec:
                 - limitranges
               verbs:
                 - list
+            - apiGroups:
+                - monitoring.coreos.com
+              resources:
+                - servicemonitors
+              verbs:
+                - get
+                - create
           serviceAccountName: che-operator
       deployments:
         - name: che-operator
@@ -1034,196 +962,29 @@ spec:
       permissions:
         - rules:
             - apiGroups:
-                - extensions
-              resources:
-                - ingresses
-              verbs:
-                - '*'
-            - apiGroups:
-                - networking.k8s.io
-              resources:
-                - ingresses
-              verbs:
-                - '*'
-            - apiGroups:
-                - batch
-              resources:
-                - jobs
-              verbs:
-                - create
-                - delete
-                - get
-                - update
-                - watch
-                - list
-            - apiGroups:
-                - route.openshift.io
-              resources:
-                - routes
-                - routes/custom-host
-              verbs:
-                - '*'
-            - apiGroups:
-                - rbac.authorization.k8s.io
-              resources:
-                - roles
-                - rolebindings
-                - clusterroles
-                - clusterrolebindings
-              verbs:
-                - list
-                - create
-                - watch
-                - update
-                - get
-                - delete
-            - apiGroups:
-                - ""
-              resources:
-                - pods
-                - services
-                - serviceaccounts
-                - endpoints
-                - persistentvolumeclaims
-                - events
-                - configmaps
-                - secrets
-                - pods/exec
-                - pods/log
-              verbs:
-                - '*'
-            - apiGroups:
-                - ""
-              resources:
-                - namespaces
-              verbs:
-                - get
-            - apiGroups:
-                - apps
-                - extensions
-              resources:
-                - deployments
-                - replicasets
-              verbs:
-                - '*'
-            - apiGroups:
-                - monitoring.coreos.com
-              resources:
-                - servicemonitors
-              verbs:
-                - get
-                - create
-            - apiGroups:
-                - org.eclipse.che
-              resources:
-                - checlusters
-                - checlusters/status
-                - checlusters/finalizers
-              verbs:
-                - '*'
-            - apiGroups:
-                - metrics.k8s.io
-              resources:
-                - pods
-                - nodes
-              verbs:
-                - get
-                - list
-                - watch
-            - apiGroups:
-                - operators.coreos.com
-              resources:
-                - subscriptions
-                - clusterserviceversions
-                - operatorgroups
-              verbs:
-                - '*'
-            - apiGroups:
-                - packages.operators.coreos.com
-              resources:
-                - packagemanifests
-              verbs:
-                - get
-                - list
-            - apiGroups:
-                - ""
-              resources:
-                - configmaps/status
-              verbs:
-                - get
-                - update
-                - patch
-            - apiGroups:
-                - ""
-              resources:
-                - events
-              verbs:
-                - create
-            - apiGroups:
-                - apps
-              resourceNames:
-                - che-operator
-              resources:
-                - deployments/finalizers
-              verbs:
-                - update
-            - apiGroups:
-                - controller.devfile.io
-              resources:
-                - devworkspaceroutings
-              verbs:
-                - '*'
-            - apiGroups:
-                - controller.devfile.io
-              resources:
-                - devworkspaceroutings/finalizers
-              verbs:
-                - update
-            - apiGroups:
-                - controller.devfile.io
-              resources:
-                - devworkspaceroutings/status
-              verbs:
-                - get
-                - patch
-                - update
-            - apiGroups:
-                - oauth.openshift.io
-              resources:
-                - oauthclients
-              verbs:
-                - create
-                - delete
-                - deletecollection
-                - get
-                - list
-                - patch
-                - update
-                - watch
-            - apiGroups:
                 - ""
               resources:
                 - configmaps
               verbs:
-                - get
-                - list
-                - watch
                 - create
+                - delete
+                - get
                 - update
                 - patch
-                - delete
+                - watch
+                - list
             - apiGroups:
                 - coordination.k8s.io
               resources:
                 - leases
               verbs:
-                - get
-                - list
-                - watch
                 - create
+                - delete
+                - get
                 - update
                 - patch
-                - delete
+                - watch
+                - list
             - apiGroups:
                 - ""
               resources:
@@ -1251,7 +1012,7 @@ spec:
     - java
   links:
     - name: Product Page
-      url: http://www.eclipse.org/che
+      url: https://www.eclipse.org/che
     - name: Documentation
       url: https://www.eclipse.org/che/docs
     - name: Operator GitHub Repo
@@ -1263,7 +1024,7 @@ spec:
   minKubeVersion: 1.19.0
   provider:
     name: Eclipse Foundation
-  version: 7.82.0-842.next
+  version: 7.83.0-858.next
   webhookdefinitions:
     - admissionReviewVersions:
         - v1
