--- a/deploy/deployment/kubernetes/objects/che-operator.ClusterRole.yaml
+++ b/deploy/deployment/kubernetes/objects/che-operator.ClusterRole.yaml
@@ -21,11 +21,17 @@ metadata:
   name: che-operator
 rules:
 - apiGroups:
-  - ""
+  - batch
   resources:
-  - nodes
+  - jobs
   verbs:
+  - create
+  - delete
   - get
+  - update
+  - patch
+  - watch
+  - list
 - apiGroups:
   - oauth.openshift.io
   resources:
@@ -33,37 +39,11 @@ rules:
   verbs:
   - create
   - delete
-  - deletecollection
   - get
-  - list
-  - patch
   - update
-  - watch
-- apiGroups:
-  - config.openshift.io
-  resources:
-  - oauths
-  verbs:
-  - get
-  - list
-  - watch
   - patch
-- apiGroups:
-  - config.openshift.io
-  resources:
-  - infrastructures
-  - proxies
-  verbs:
-  - get
-  - list
   - watch
-- apiGroups:
-  - user.openshift.io
-  resources:
-  - users
-  verbs:
   - list
-  - delete
 - apiGroups:
   - user.openshift.io
   resources:
@@ -71,55 +51,49 @@ rules:
   verbs:
   - get
 - apiGroups:
-  - user.openshift.io
-  resources:
-  - identities
-  verbs:
-  - delete
-- apiGroups:
   - console.openshift.io
   resources:
   - consolelinks
   verbs:
-  - get
-  - list
   - create
+  - delete
+  - get
   - update
   - patch
-  - delete
+  - watch
+  - list
 - apiGroups:
   - rbac.authorization.k8s.io
   resources:
-  - clusterrolebindings
-  - clusterroles
   - roles
   - rolebindings
+  - clusterroles
+  - clusterrolebindings
   verbs:
-  - list
   - create
-  - watch
-  - update
+  - delete
   - get
+  - update
+  - patch
+  - watch
+  - list
+- apiGroups:
+  - authorization.openshift.io
+  resources:
+  - rolebindings
+  verbs:
+  - get
+  - create
+  - update
   - delete
 - apiGroups:
   - authorization.openshift.io
   resources:
   - roles
-  - rolebindings
   verbs:
   - get
   - create
   - update
-  - delete
-- apiGroups:
-  - org.eclipse.che
-  resources:
-  - checlusters
-  - checlusters/status
-  - checlusters/finalizers
-  - checlusters/status
-  verbs:
-  - '*'
 - apiGroups:
   - project.openshift.io
   resources:
@@ -148,63 +122,38 @@ rules:
   - update
   - watch
 - apiGroups:
-  - ""
-  resources:
-  - pods/exec
-  verbs:
-  - create
-  - get
-- apiGroups:
   - apps
   resources:
-  - secrets
+  - replicasets
   verbs:
-  - list
-- apiGroups:
-  - ""
-  resources:
-  - secrets
-  verbs:
-  - list
   - get
-  - create
-  - update
+  - list
   - patch
   - delete
 - apiGroups:
-  - ""
-  resources:
-  - persistentvolumeclaims
-  verbs:
-  - create
-  - get
-  - list
-  - watch
-  - delete
-- apiGroups:
-  - ""
-  resources:
-  - pods
-  verbs:
-  - get
-  - list
-  - create
-  - watch
-  - delete
-- apiGroups:
   - apps
-  - extensions
   resources:
   - deployments
-  - replicasets
   verbs:
-  - '*'
+  - list
+  - create
+  - watch
+  - update
+  - get
+  - patch
+  - delete
 - apiGroups:
   - route.openshift.io
   resources:
   - routes
   verbs:
-  - '*'
+  - create
+  - delete
+  - get
+  - update
+  - patch
+  - watch
+  - list
 - apiGroups:
   - route.openshift.io
   resources:
@@ -219,48 +168,17 @@ rules:
   - list
   - watch
 - apiGroups:
-  - apps
-  resources:
-  - replicasets
-  verbs:
-  - list
-  - get
-  - patch
-  - delete
-- apiGroups:
-  - extensions
-  resources:
-  - ingresses
-  verbs:
-  - '*'
-- apiGroups:
   - networking.k8s.io
   resources:
   - ingresses
   verbs:
-  - '*'
-- apiGroups:
-  - apiextensions.k8s.io
-  resources:
-  - customresourcedefinitions
-  verbs:
-  - get
   - create
+  - delete
+  - get
   - update
-- apiGroups:
-  - operators.coreos.com
-  resources:
-  - subscriptions
-  verbs:
-  - get
-- apiGroups:
-  - operators.coreos.com
-  resources:
-  - clusterserviceversions
-  verbs:
-  - list
-  - get
+  - patch
   - watch
+  - list
 - apiGroups:
   - metrics.k8s.io
   resources:
@@ -271,16 +189,6 @@ rules:
   - list
   - watch
 - apiGroups:
-  - cert-manager.io
-  resources:
-  - issuers
-  - certificates
-  verbs:
-  - create
-  - get
-  - list
-  - update
-- apiGroups:
   - ""
   resources:
   - configmaps
@@ -290,33 +198,27 @@ rules:
   - serviceaccounts
   - services
   verbs:
-  - '*'
-- apiGroups:
-  - apps
-  resourceNames:
-  - che-operator
-  resources:
-  - deployments/finalizers
-  verbs:
+  - create
+  - delete
+  - get
   - update
+  - patch
+  - watch
+  - list
 - apiGroups:
-  - batch
+  - org.eclipse.che
   resources:
-  - jobs
+  - checlusters
+  - checlusters/status
+  - checlusters/finalizers
   verbs:
   - create
   - delete
   - get
   - update
+  - patch
   - watch
   - list
-- apiGroups:
-  - monitoring.coreos.com
-  resources:
-  - servicemonitors
-  verbs:
-  - create
-  - get
 - nonResourceURLs:
   - /metrics
   verbs:
@@ -326,13 +228,25 @@ rules:
   resources:
   - kubernetesimagepullers
   verbs:
-  - '*'
+  - create
+  - delete
+  - get
+  - update
+  - list
 - apiGroups:
   - config.openshift.io
   resourceNames:
   - cluster
   resources:
   - consoles
+  verbs:
+  - get
+- apiGroups:
+  - config.openshift.io
+  resourceNames:
+  - cluster
+  resources:
+  - proxies
   verbs:
   - get
 - apiGroups:
@@ -352,31 +266,38 @@ rules:
   - list
   - create
 - apiGroups:
+  - ""
+  resources:
+  - pods/exec
+  verbs:
+  - create
+  - get
+- apiGroups:
   - workspace.devfile.io
   resources:
   - devworkspaces
   - devworkspacetemplates
   verbs:
-  - get
-  - list
-  - watch
   - create
   - delete
-  - patch
+  - get
   - update
+  - patch
+  - watch
+  - list
 - apiGroups:
   - controller.devfile.io
   resources:
   - devworkspaceroutings
   - devworkspaceoperatorconfigs
   verbs:
-  - get
-  - list
-  - watch
   - create
   - delete
-  - patch
+  - get
   - update
+  - patch
+  - watch
+  - list
 - apiGroups:
   - controller.devfile.io
   resources:
@@ -419,3 +340,10 @@ rules:
   - limitranges
   verbs:
   - list
+- apiGroups:
+  - monitoring.coreos.com
+  resources:
+  - servicemonitors
+  verbs:
+  - get
+  - create
