--- a/.github/workflows/minikube-test-upgrade-stable-to-next.yaml
+++ b/.github/workflows/minikube-test-upgrade-stable-to-next.yaml
@@ -29,7 +29,7 @@ jobs:
     - name: Install yq
       run: sudo pip install yq
     - name: Install chectl
-      run: bash <(curl -sL https://www.eclipse.org/che/chectl/) --channel=next
+      run: bash <(curl -sL https://che-incubator.github.io/chectl/install.sh) --channel=next
     - name: Run tests
       run: /bin/bash build/scripts/minikube-tests/test-upgrade-from-stable-to-next.sh
       env:
