--- a/olm-catalog/stable/channel.yaml
+++ b/olm-catalog/stable/channel.yaml
@@ -75,3 +75,5 @@ entries:
     replaces: eclipse-che.v7.82.0
   - name: eclipse-che.v7.84.0
     replaces: eclipse-che.v7.83.0
+  - name: eclipse-che.v7.85.0
+    replaces: eclipse-che.v7.84.0
