--- a/config/crd/bases/org.eclipse.che_checlusters.yaml
+++ b/config/crd/bases/org.eclipse.che_checlusters.yaml
@@ -1,15 +1,3 @@
-#
-# Copyright (c) 2019-2023 Red Hat, Inc.
-# This program and the accompanying materials are made
-# available under the terms of the Eclipse Public License 2.0
-# which is available at https://www.eclipse.org/legal/epl-2.0/
-#
-# SPDX-License-Identifier: EPL-2.0
-#
-# Contributors:
-#   Red Hat, Inc. - initial API and implementation
-#
-
 
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
@@ -8075,9 +8063,13 @@ spec:
                           OpenShift.
                         type: string
                       oAuthSecret:
-                        description: Name of the secret set in the OpenShift `OAuthClient`
+                        description: 'Name of the secret set in the OpenShift `OAuthClient`
                           resource used to set up identity federation on the OpenShift
-                          side.
+                          side. For Kubernetes, this can either be the plain text
+                          oAuthSecret value, or the name of a kubernetes secret which
+                          contains a key `oAuthSecret` and the value is the secret.
+                          NOTE: this secret must exist in the same namespace as the
+                          `CheCluster` resource and contain the label `app.kubernetes.io/part-of=che.eclipse.org`.'
                         type: string
                     type: object
                   domain:
