fix: dev resources
Signed-off-by: Anatolii Bazko <abazko@redhat.com>

--- a/bundle/next/eclipse-che/manifests/org.eclipse.che_checlusters.yaml
+++ b/bundle/next/eclipse-che/manifests/org.eclipse.che_checlusters.yaml
@@ -8293,9 +8293,13 @@ spec:
                             for OpenShift.
                           type: string
                         oAuthSecret:
-                          description: Name of the secret set in the OpenShift `OAuthClient`
+                          description: 'Name of the secret set in the OpenShift `OAuthClient`
                             resource used to set up identity federation on the OpenShift
-                            side.
+                            side. For Kubernetes, this can either be the plain text
+                            oAuthSecret value, or the name of a kubernetes secret
+                            which contains a key `oAuthSecret` and the value is the
+                            secret. NOTE: this secret must exist in the same namespace
+                            as the `CheCluster` resource and contain the label `app.kubernetes.io/part-of=che.eclipse.org`.'
                           type: string
                       type: object
                     domain:
