--- a/.github/workflows/release-next-catalog-and-operator-image.yaml
+++ b/.github/workflows/release-next-catalog-and-operator-image.yaml
@@ -78,8 +78,10 @@ jobs:
           registry: quay.io
       - name: Build catalog source
         run: |
-          ${GITHUB_WORKSPACE}/build/scripts/release/addDigests.sh -s $(make csv-path CHANNEL=next) -t next
-          ${GITHUB_WORKSPACE}/build/scripts/olm/release-catalog.sh \
+          ./build/scripts/release/editors-definitions.sh add-env-vars
+          make update-dev-resources
+          ./build/scripts/release/addDigests.sh -s $(make csv-path CHANNEL=next) -t next
+          ./build/scripts/olm/release-catalog.sh \
             --channel next \
             --catalog-image quay.io/eclipse/eclipse-che-olm-catalog:next-digest \
             --bundle-image quay.io/eclipse/eclipse-che-olm-bundle:$(make bundle-version CHANNEL=next)-digest
